  - livemap(tm) in LMS ;-) network state is updated asynchronously in real time 
    in phpui->lastonline_limit time periods [chilan]
  - we can ping nodes and devices watching results in popups [chilan]
  - 5 default base layers for maps [chilan]
  - ported to xajax 0.5 [chilan]
  - toolbar on netdevmap and possibility to ping any host (event not included in database) [chilan]

version 1.11.13 Dira (2011-04-07)

  - contrib/cutoff2: Fixed "Column 'period' in where clause is ambiguous" [alec]
  - BTS#0000862: Fixed bug in SQL query on MySQL [alec]
  - customers: add post name [chilan]
  - receipts: replaced stamp by division/company data [chilan]
  - documents: added sale date [chilan]
  - BTS#0000863: changed temporary referenced $number variable to actual variable [chilan]
  - Fixed performance of nodes quick-searching on MySQL [alec]
  - Fix regression where wasn't possible to view information about deleted customer [alec]
  - Added searching by option name in configuration options list [alec]
  - Fixed popups height on Internet Explorer [alec]
  - Added possibility to select invoices paytime from calendar popup [alec]
  - lms-payments: Added option for setting sale date to the 1st day of next month [alec]
  - Added sale date and deadline date on Sale Registry printouts with possibility
    to choose which date will be used to sort the list [alec]
  - Enable possibility to edit/note of accounted invoices [alec]
  - Added 'in debt above 100%' filter on customer list [alec]

version 1.11.12 Aris (2011-03-18)

  - Don't send mail to deleted users [alec]
  - BTS#0000847: Fixed UI language setting when HTTP_ACCEPT_LANGUAGE is not set [alec]
  - Added option finances/cashimport_use_idate to use file import date
    instead of cash operation date [alec]
  - Fixed goto feature of the second scroller on the page [alec]
  - BTS#0000848: Fixed cash import history report when source is selected [alec]
  - Fixed SQL query in lms-makewarnings [alec]