@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_ui_language.html}">
 <title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle} :{/if}::</title>
 <link href="img/style.css" rel="stylesheet" type="text/css">
+<link href="img/map.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="img/common.js"></script>
 {if $js}<script type="text/javascript">
 <!--
