@@ -24,6 +24,7 @@
 <script type="text/javascript" language="JavaScript" src="img/OpenLayers/OpenLayers.js"></script>
 <script type="text/javascript" language="JavaScript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 <div id="map"></div>
+<script type="text/javascript" language="Javascript" src="img/DragPopup.js"></script>
 <script type="text/javascript" language="Javascript" src="img/map.js"></script>
 <script type="text/javascript" language="JavaScript">
 <!--
